app-k8s/app-deployment.yaml
# App deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: app
  namespace: app
  labels:
    k8s-app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: app
  template:
    metadata:
      labels:
        k8s-app: app
        name: app
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: capstone:$GITHUB_SHA
        name: app
        ports:
        - name: http
          containerPort: 9000
