app-k8s/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: app
  annotations:
    kubernetes.io/ingress.class: traefik-class
spec:
  rules:
  - host: app.facelessvoid.co
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: http
